# xstockstrat

./: .editorconfig  .env.example  .env.fe.local  .env.local  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .jscpd.json  .markdownlint.yaml  .mcp.json  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.codegen  README.md  SECURITY.md  docker-compose.yml  go.work  go.work.sum  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  xstockstrat.code-workspace
.claude/: context-map.yaml  settings.json
.claude/agents/: codebase-discovery.md  design-adversary.md  design-proposer.md  dry-reviewer.md  feature-overlap.md  service-briefing.md  spec-reviewer.md
.claude/hooks/: session-start.sh
.do/: app.dev.yaml  app.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/PULL_REQUEST_TEMPLATE/: hotfix.md  promotion.md
.github/workflows/: ci-validate-feature-status.yml  ci.yml  cleanup-claude-branches.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  docker-build.yml  grafana-dashboards.yml  prod-down.yml  prod-up.yml  promote.yml  (+1 more)
.husky/: pre-commit
_tasks/: x-add-data-source.md  x-db-seed-migration-state.md  x-feature-workflow.md  x-figma-export.md  x-implementation-roadmap.md  x-observability-otel-grafana.md  x-phase3-deviations.md  x-phase7-deviations.md  x-proto-versioning.md  x-setup-digitalocean.md
docs/: CLAUDE.md
scripts/: Dockerfile.migrate  bootstrap.sh  buf-gen.sh  build-launch-pdfs.py  check-context-map.sh  check-duplication.sh  check-prereqs.sh  db-connect.sh  db-migrate.sh  do-inject-prod-secrets.py  do-setup-check.sh  docker-entrypoint.sh  grafana-deploy-dashboards.sh  integration-test.sh  localenv-setup.sh  manage-users.sh  proofread-claude-md.sh  security-audit.sh  setup-branch-protection.sh  setup-env.sh  subtree-setup.sh  subtree-sync.sh  wait-for-deps.sh
services/xstockstrat-agent/: CLAUDE.md  Dockerfile  claude_mcp_config.json  pyproject.toml
services/xstockstrat-agent/app/: auth.py  client.py  main.py  oauth_metadata.py  oauth_server.py  telemetry.py  tools.py
services/xstockstrat-agent/app/prompts/: signal_extraction.md
services/xstockstrat-agent/tests/: conftest.py  test_auth.py  test_client.py  test_oauth.py  test_tools.py  test_tools_endpoint.py
services/xstockstrat-analysis/: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
services/xstockstrat-analysis/app/: http_server.py  main.py  telemetry.py
services/xstockstrat-analysis/app/config/: watcher.py
services/xstockstrat-analysis/app/engine/: fundsignal_loop.py  live_loop.py
services/xstockstrat-analysis/app/handlers/: servicer.py
services/xstockstrat-analysis/app/repositories/: strategies.py
services/xstockstrat-analysis/app/services/: evaluator.py  fundamentals_scoring.py  scoring.py  screener.py
services/xstockstrat-analysis/migrations/: 001_strategies.down.sql  001_strategies.up.sql  002_strategy_live_enabled.down.sql  002_strategy_live_enabled.up.sql  003_fundsignal_runs.down.sql  003_fundsignal_runs.up.sql  004_fundsignal_emitted.down.sql  004_fundsignal_emitted.up.sql
services/xstockstrat-analysis/tests/: conftest.py  test_analysis_helpers.py  test_analysis_servicer.py  test_fundamentals_scoring.py  test_fundsignal_loop.py  test_live_loop.py  test_mcp_secret_middleware.py  test_screener.py  test_strategy_evaluator.py
services/xstockstrat-indicators/: CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
services/xstockstrat-indicators/app/: http_server.py  main.py  telemetry.py
services/xstockstrat-indicators/app/config/: watcher.py
services/xstockstrat-indicators/app/formulas/: __init__.py  fundamentals_value_quality.py
services/xstockstrat-indicators/app/handlers/: servicer.py
services/xstockstrat-indicators/app/services/: formulas_repository.py  indicators_engine.py  parameters.py  sandbox.py  seed_formulas.py
services/xstockstrat-indicators/migrations/: 001_formulas.down.sql  001_formulas.up.sql  002_formula_parameters.down.sql  002_formula_parameters.up.sql  003_formula_outputs.down.sql  003_formula_outputs.up.sql
services/xstockstrat-indicators/n8n/: webhook.py
services/xstockstrat-indicators/tests/: conftest.py  test_formulas.py  test_fundamentals_formula.py  test_indicators_engine.py  test_parameters.py  test_sandbox.py
(+908 files in other folders)
