[project]
name = "xstockstrat-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "anyio>=4.4.0",
  "starlette>=0.37.0",
  "uvicorn[standard]>=0.29.0",
  "grpcio>=1.80.0",
  "protobuf>=5.26.0",
  "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
