[project]
name = "xstockstrat-analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.63.0",
  "grpcio-reflection>=1.63.0",
  "grpcio-tools>=1.63.0",
  "protobuf>=5.26.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
  "opentelemetry-instrumentation-grpc>=0.46b0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
