[project]
name = "xstockstrat-indicators"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.63.0",
  "grpcio-reflection>=1.63.0",
  "grpcio-tools>=1.63.0",
  "protobuf>=5.26.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
  "opentelemetry-instrumentation-grpc>=0.46b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]
