[project]
name = "xstockstrat-indicators"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.80.0",
  "grpcio-reflection>=1.80.0",
  "grpcio-tools>=1.80.0",
  "protobuf>=5.26.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
  "opentelemetry-instrumentation-grpc>=0.46b0",
  "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "pytest-asyncio>=0.23.0"]

[tool.coverage.run]
omit = [
    "app/services/sandbox.py",
    "app/telemetry.py",
    "app/main.py",
    "app/handlers/servicer.py",
    "app/config/watcher.py",
]
